--- a/Vie/en.lproj/Colors.plist
+++ b/Vie/en.lproj/Colors.plist
@@ -2,15 +2,29 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <array>
+    <dict>
+        <key>guid</key>
+        <string>default</string>
+        <key>color_name</key>
+        <string>Default</string>
+        <key>fill_color</key>
+        <string>CCCCCC</string>
+        <key>border_color</key>
+        <string>666666</string>
+    </dict>
+    <dict>
+        <key>guid</key>
+        <string>red</string>
+        <key>color_name</key>
+        <string>Red</string>
+        <key>fill_color</key>
+        <string>FF0000</string>
+        <key>border_color</key>
+        <string>CC0000</string>
+    </dict>
 	<dict>
-		<key>color_name</key>
-		<string>Red</string>
-		<key>fill_color</key>
-		<string>FF0000</string>
-		<key>border_color</key>
-		<string>CC0000</string>
-	</dict>
-	<dict>
+        <key>guid</key>
+        <string>green</string>
 		<key>color_name</key>
 		<string>Green</string>
 		<key>fill_color</key>
@@ -19,6 +33,8 @@
 		<string>00CC00</string>
 	</dict>
 	<dict>
+        <key>guid</key>
+        <string>blue</string>
 		<key>color_name</key>
 		<string>Blue</string>
 		<key>fill_color</key>
