--- a/Vie/en.lproj/Colors.plist
+++ b/Vie/en.lproj/Colors.plist
@@ -9,8 +9,14 @@
         <string>Default</string>
         <key>fill_color</key>
         <string>CCCCCC</string>
-        <key>border_color</key>
-        <string>666666</string>
+    </dict>
+    <dict>
+        <key>guid</key>
+        <string>purple</string>
+        <key>color_name</key>
+        <string>Purple</string>
+        <key>fill_color</key>
+        <string>D01FD1</string>
     </dict>
     <dict>
         <key>guid</key>
@@ -18,29 +24,31 @@
         <key>color_name</key>
         <string>Red</string>
         <key>fill_color</key>
-        <string>FF0000</string>
-        <key>border_color</key>
-        <string>CC0000</string>
+        <string>EB344C</string>
     </dict>
-	<dict>
+    <dict>
         <key>guid</key>
-        <string>green</string>
-		<key>color_name</key>
-		<string>Green</string>
-		<key>fill_color</key>
-		<string>00FF00</string>
-		<key>border_color</key>
-		<string>00CC00</string>
-	</dict>
-	<dict>
+        <string>dark_blue</string>
+        <key>color_name</key>
+        <string>Dark Blue</string>
+        <key>fill_color</key>
+        <string>615582</string>
+    </dict>
+    <dict>
         <key>guid</key>
-        <string>blue</string>
-		<key>color_name</key>
-		<string>Blue</string>
-		<key>fill_color</key>
-		<string>0000FF</string>
-		<key>border_color</key>
-		<string>0000CC</string>
-	</dict>
+        <string>light_purple</string>
+        <key>color_name</key>
+        <string>Light Purple</string>
+        <key>fill_color</key>
+        <string>CAAFD1</string>
+    </dict>
+    <dict>
+        <key>guid</key>
+        <string>light_blue</string>
+        <key>color_name</key>
+        <string>Light Blue</string>
+        <key>fill_color</key>
+        <string>C3E7FA</string>
+    </dict>
 </array>
 </plist>
