--- a/Vie/fr.lproj/Colors.plist
+++ b/Vie/fr.lproj/Colors.plist
@@ -9,38 +9,46 @@
         <string>Basique</string>
         <key>fill_color</key>
         <string>CCCCCC</string>
-        <key>border_color</key>
-        <string>666666</string>
     </dict>
-	<dict>
+    <dict>
+        <key>guid</key>
+        <string>purple</string>
+        <key>color_name</key>
+        <string>Violet</string>
+        <key>fill_color</key>
+        <string>D01FD1</string>
+    </dict>
+    <dict>
         <key>guid</key>
         <string>red</string>
-		<key>color_name</key>
-		<string>Rouge</string>
-		<key>fill_color</key>
-		<string>FF0000</string>
-		<key>border_color</key>
-		<string>CC0000</string>
-	</dict>
-	<dict>
+        <key>color_name</key>
+        <string>Rouge</string>
+        <key>fill_color</key>
+        <string>EB344C</string>
+    </dict>
+    <dict>
         <key>guid</key>
-        <string>green</string>
-		<key>color_name</key>
-		<string>Vert</string>
-		<key>fill_color</key>
-		<string>00FF00</string>
-		<key>border_color</key>
-		<string>00CC00</string>
-	</dict>
-	<dict>
+        <string>dark_blue</string>
+        <key>color_name</key>
+        <string>Bleu Marine</string>
+        <key>fill_color</key>
+        <string>615582</string>
+    </dict>
+    <dict>
         <key>guid</key>
-        <string>blue</string>
-		<key>color_name</key>
-		<string>Bleu</string>
-		<key>fill_color</key>
-		<string>0000FF</string>
-		<key>border_color</key>
-		<string>0000CC</string>
-	</dict>
+        <string>light_purple</string>
+        <key>color_name</key>
+        <string>Violet Clair</string>
+        <key>fill_color</key>
+        <string>CAAFD1</string>
+    </dict>
+    <dict>
+        <key>guid</key>
+        <string>light_blue</string>
+        <key>color_name</key>
+        <string>Bleu Ciel</string>
+        <key>fill_color</key>
+        <string>C3E7FA</string>
+    </dict>
 </array>
 </plist>
