Added splash screen animations.

--- a/Vie/Vie-Info.plist
+++ b/Vie/Vie-Info.plist
@@ -43,5 +43,9 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+	<key>UIAppFonts</key>
+	<array>
+		<string>Gotham-Book.otf</string>
+	</array>
 </dict>
 </plist>
